; ModuleID = '/home/carl/AnghaBench/linux/drivers/phy/hisilicon/extr_phy-hisi-inno-usb2.c_hisi_inno_phy_exit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/phy/hisilicon/extr_phy-hisi-inno-usb2.c_hisi_inno_phy_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy = type { i32 }
%struct.hisi_inno_phy_port = type { i32, %struct.hisi_inno_phy_priv* }
%struct.hisi_inno_phy_priv = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.phy*)* @hisi_inno_phy_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hisi_inno_phy_exit(%struct.phy* %0) #0 {
  %2 = alloca %struct.phy*, align 8
  %3 = alloca %struct.hisi_inno_phy_port*, align 8
  %4 = alloca %struct.hisi_inno_phy_priv*, align 8
  store %struct.phy* %0, %struct.phy** %2, align 8
  %5 = load %struct.phy*, %struct.phy** %2, align 8
  %6 = call %struct.hisi_inno_phy_port* @phy_get_drvdata(%struct.phy* %5)
  store %struct.hisi_inno_phy_port* %6, %struct.hisi_inno_phy_port** %3, align 8
  %7 = load %struct.hisi_inno_phy_port*, %struct.hisi_inno_phy_port** %3, align 8
  %8 = getelementptr inbounds %struct.hisi_inno_phy_port, %struct.hisi_inno_phy_port* %7, i32 0, i32 1
  %9 = load %struct.hisi_inno_phy_priv*, %struct.hisi_inno_phy_priv** %8, align 8
  store %struct.hisi_inno_phy_priv* %9, %struct.hisi_inno_phy_priv** %4, align 8
  %10 = load %struct.hisi_inno_phy_port*, %struct.hisi_inno_phy_port** %3, align 8
  %11 = getelementptr inbounds %struct.hisi_inno_phy_port, %struct.hisi_inno_phy_port* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = call i32 @reset_control_assert(i32 %12)
  %14 = load %struct.hisi_inno_phy_priv*, %struct.hisi_inno_phy_priv** %4, align 8
  %15 = getelementptr inbounds %struct.hisi_inno_phy_priv, %struct.hisi_inno_phy_priv* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @reset_control_assert(i32 %16)
  %18 = load %struct.hisi_inno_phy_priv*, %struct.hisi_inno_phy_priv** %4, align 8
  %19 = getelementptr inbounds %struct.hisi_inno_phy_priv, %struct.hisi_inno_phy_priv* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @clk_disable_unprepare(i32 %20)
  ret i32 0
}

declare dso_local %struct.hisi_inno_phy_port* @phy_get_drvdata(%struct.phy*) #1

declare dso_local i32 @reset_control_assert(i32) #1

declare dso_local i32 @clk_disable_unprepare(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
